[gd_scene load_steps=9 format=3 uid="uid://byx3b8uv25uyj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7tega"]
[ext_resource type="Texture2D" uid="uid://dwdevx7njgkd4" path="res://Assets/Arrow.png" id="2_6b7bf"]
[ext_resource type="FontFile" uid="uid://cg538g7y1qqgm" path="res://Assets/FredokaOne-Regular.ttf" id="3_yu63o"]
[ext_resource type="Texture2D" uid="uid://c2fmtpepgh40r" path="res://Assets/Square.png" id="4_bquac"]
[ext_resource type="Script" path="res://scenes/game_over.gd" id="4_jp1ah"]

[sub_resource type="Animation" id="Animation_wlfxd"]
resource_name = "ScoreIncreased"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v2cms"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbq7i"]
_data = {
"RESET": SubResource("Animation_v2cms"),
"ScoreIncreased": SubResource("Animation_wlfxd")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7tega")
background_colors = Array[Color]([Color(1, 0.308265, 0.244321, 1), Color(0.340815, 0.436264, 1, 1), Color(1, 0.813471, 0.292802, 1), Color(0.421616, 1, 0.390625, 1), Color(0.746041, 0.562553, 1, 1)])

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.435294, 1, 1)

[node name="Arrow" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -58.5
offset_right = 36.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 58)
texture = ExtResource("2_6b7bf")
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 205.0
offset_bottom = 76.0
pivot_offset = Vector2(95, 30)
theme_override_fonts/font = ExtResource("3_yu63o")
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 75.0
offset_bottom = 131.0
grow_horizontal = 2
max_value = 10000.0
value = 5000.0
nine_patch_stretch = true
texture_under = ExtResource("4_bquac")
texture_progress = ExtResource("4_bquac")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(3.08037e-06, 0.559577, 0.154491, 1)

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yu63o")
theme_override_font_sizes/font_size = 50
text = "Health"
vertical_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_jp1ah")

[node name="Background" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.862745)

[node name="GameOverLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_top = 43.0
offset_right = 202.0
offset_bottom = 135.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_yu63o")
theme_override_font_sizes/font_size = 75
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -46.0
offset_right = 202.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yu63o")
theme_override_font_sizes/font_size = 75
text = "Score: 0"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -295.0
offset_right = 223.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_yu63o")
theme_override_font_sizes/font_size = 75
text = "Play Again"

[node name="HomeButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -157.0
offset_right = 143.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_yu63o")
theme_override_font_sizes/font_size = 75
text = "Home"

[node name="ScoreLabelAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbq7i")
}
speed_scale = 3.5

[connection signal="pressed" from="GameOver/PlayAgainButton" to="GameOver" method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOver/HomeButton" to="GameOver" method="_on_home_button_pressed"]
